yaml/logServer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logs-server
  labels:
    app: logs-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logs-server
  template:
    metadata:
      labels:
        app: logs-server
    spec:
      containers:
        - name: node
          image: node:14
          ports:
            - containerPort: 3000
          command:
            - bash
          args:
            - -c
            - |
              [...]
