yaml/logServerService.yaml
kind: Service
apiVersion: v1
metadata:
  name: logs-server
  labels:
    app: logs-server
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: logs-server
