yaml/logServerIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-logs
spec:
  rules:
    - host: logs.$DOMAIN
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: logs-server
                port:
                  number: 3000
